New effects from Till Busch: crops, water, landmass
As shown at LinuxTag, with modifications from Tim Moore: the base
landmass texture is mixed with the steepness and snow effects. Till's
new syntax for textures in effect files was also added. syntax for
textures. Also, syntax for accessing internal textures, such as Till's
3D noise texture, was added.

Several bugs in the effect inheritance algorithm were fixed.

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -806,6 +806,12 @@
 				RelativePath="..\..\simgear\scene\material\Effect.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\material\EffectBuilder.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectBuilder.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\material\EffectCullVisitor.cxx">
 			</File>
 			<File
@@ -823,6 +829,20 @@
 			<File
 				RelativePath="..\..\simgear\scene\material\GLPredicate.hxx">
 			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Noise.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Noise.hxx">
+			</File>
+
+			<File
+				RelativePath="..\..\simgear\scene\material\TextureBuilder.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\TextureBuilder.hxx">
+			</File>
+
 			<File
 				RelativePath="..\..\simgear\scene\material\makeEffect.cxx">
 			</File>
