--- a/simgear/scene/material/Makefile.am
+++ b/simgear/scene/material/Makefile.am
@@ -6,25 +6,30 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	Effect.hxx \
+	EffectBuilder.hxx \
 	EffectCullVisitor.hxx \
 	EffectGeode.hxx \
 	GLPredicate.hxx \
 	Pass.hxx \
 	Technique.hxx \
+	TextureBuilder.hxx \
 	mat.hxx \
 	matlib.hxx \
 	matmodel.hxx
 
 libsgmaterial_a_SOURCES = \
 	Effect.cxx \
+	EffectBuilder.cxx \
 	EffectCullVisitor.cxx \
 	EffectGeode.cxx \
 	GLPredicate.cxx \
 	Pass.cxx \
 	Technique.cxx \
+	TextureBuilder.cxx \
 	makeEffect.cxx \
 	mat.cxx \
 	matlib.cxx \
-	matmodel.cxx
+	matmodel.cxx \
+	Noise.cxx
 
 INCLUDES = -I$(top_srcdir)
