Compile under MSVC9

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1196,6 +1196,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\material\EffectBuilder.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\EffectBuilder.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\material\EffectCullVisitor.cxx"
 				>
 			</File>
@@ -1248,6 +1256,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\material\Noise.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\Noise.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\material\Pass.cxx"
 				>
 			</File>
@@ -1261,6 +1277,14 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\scene\material\Technique.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\TextureBuilder.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\material\TextureBuilder.hxx"
 				>
 			</File>
 		</Filter>
