--- a/simgear/sound/Makefile.am
+++ b/simgear/sound/Makefile.am
@@ -16,21 +16,21 @@ libsgsound_a_SOURCES = \
 	soundmgr_openal.cxx \
 	xmlsound.cxx 
 
-noinst_PROGRAMS = openal_test1 openal_test2
+#noinst_PROGRAMS = openal_test1 openal_test2
 
-openal_test1_SOURCES = openal_test1.cxx
-openal_test2_SOURCES = openal_test2.cxx
+#openal_test1_SOURCES = openal_test1.cxx
+#openal_test2_SOURCES = openal_test2.cxx
 
-openal_test1_LDADD = \
-	$(top_builddir)/simgear/debug/libsgdebug.a \
-	$(openal_LIBS)
+#openal_test1_LDADD = \
+#	$(top_builddir)/simgear/debug/libsgdebug.a \
+#	$(openal_LIBS)
 
-openal_test2_LDADD = \
-	libsgsound.a \
-	$(top_builddir)/simgear/debug/libsgdebug.a \
-	$(top_builddir)/simgear/misc/libsgmisc.a \
-	$(top_builddir)/simgear/structure/libsgstructure.a \
-	$(openal_LIBS) \
-	-lOpenThreads
+#openal_test2_LDADD = \
+#	libsgsound.a \
+#	$(top_builddir)/simgear/debug/libsgdebug.a \
+#	$(top_builddir)/simgear/misc/libsgmisc.a \
+#	$(top_builddir)/simgear/structure/libsgstructure.a \
+#	$(openal_LIBS) \
+#	-lOpenThreads
 
 INCLUDES = -I$(top_srcdir) -DSRC_DIR=\"$(top_srcdir)/simgear/sound\"
