support osgText in models

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1155,6 +1155,14 @@
 				RelativePath="..\..\simgear\scene\model\shadanim.cxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\simgear\scene\model\SGText.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\model\SGText.hxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_sgsound"
