Effects for models
Basically working, at last. Among other things, create effects in
 models loaded directly from .ac files; this can happen, for example,
with the random models from the materials library.

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -1172,6 +1172,12 @@
 			Name="Lib_sgutil"
 			Filter="">
 			<File
+				RelativePath="..\..\simgear\scene\util\CopyOp.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\CopyOp.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\util\NodeAndDrawableVisitor.cxx">
 			</File>
 			<File
