--- a/simgear/props/Makefile.am
+++ b/simgear/props/Makefile.am
@@ -20,7 +20,12 @@ props_test_LDADD = \
 	$(top_builddir)/simgear/xml/libsgxml.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
-	$(top_builddir)/simgear/structure/libsgstructure.a \
-	-lOpenThreads
+	$(top_builddir)/simgear/structure/libsgstructure.a
+
+if HAVE_FRAMEWORK_OSG
+props_test_LDFLAGS = $(openthreads_FRAMEWORK)
+else
+props_test_LDFLAGS = -lOpenThreads
+endif
 
 INCLUDES = -I$(top_srcdir)
