--- a/simgear/props/Makefile.am
+++ b/simgear/props/Makefile.am
@@ -5,12 +5,15 @@ lib_LIBRARIES = libsgprops.a
 include_HEADERS = \
 	condition.hxx \
 	props.hxx \
-	props_io.hxx
+	props_io.hxx \
+	AtomicChangeListener.hxx \
+	ExtendedPropertyAdapter.hxx
 
 libsgprops_a_SOURCES = \
 	condition.cxx \
 	props.cxx \
-	props_io.cxx
+	props_io.cxx \
+	AtomicChangeListener.cxx
 
 noinst_PROGRAMS = props_test
 
