--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -984,6 +984,14 @@
 			Name="Lib_sgprops"
 			>
 			<File
+				RelativePath="..\..\simgear\props\AtomicChangeListener.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\props\AtomicChangeListener.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\props\condition.cxx"
 				>
 			</File>
@@ -991,6 +999,11 @@
 				RelativePath="..\..\simgear\props\condition.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\simgear\props\ExtendedPropertyAdapter.hxx"
+				>
+			</File>
+
 			<File
 				RelativePath="..\..\simgear\props\props.cxx"
 				>
@@ -1807,6 +1820,14 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\scene\util\StateAttributeFactory.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\UpdateOnceCallback.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\UpdateOnceCallback.hxx"
 				>
 			</File>
 		</Filter>
