Updates to the test utilies.

--- a/simgear/sound/Makefile.am
+++ b/simgear/sound/Makefile.am
@@ -18,21 +18,22 @@ libsgsound_a_SOURCES = \
 	soundmgr_openal.cxx \
 	xmlsound.cxx 
 
-#noinst_PROGRAMS = openal_test1 openal_test2
+check_PROGRAMS = openal_test1 openal_test2
 
-#openal_test1_SOURCES = openal_test1.cxx
-#openal_test2_SOURCES = openal_test2.cxx
+openal_test1_SOURCES = openal_test1.cxx
+openal_test2_SOURCES = openal_test2.cxx
 
-#openal_test1_LDADD = \
-#	$(top_builddir)/simgear/debug/libsgdebug.a \
-#	$(openal_LIBS)
+openal_test1_LDADD = \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(openal_LIBS)
 
-#openal_test2_LDADD = \
-#	libsgsound.a \
-#	$(top_builddir)/simgear/structure/libsgstructure.a \
-#	$(top_builddir)/simgear/timing/libsgtiming.a \
-#	$(top_builddir)/simgear/debug/libsgdebug.a \
-#	$(top_builddir)/simgear/misc/libsgmisc.a \
-#	$(openal_LIBS)
+openal_test2_LDADD = \
+	libsgsound.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(top_builddir)/simgear/timing/libsgtiming.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/math/libsgmath.a \
+	$(openal_LIBS)
 
 INCLUDES = -I$(top_srcdir) -DSRC_DIR=\"$(top_srcdir)/simgear/sound\"
