--- a/simgear/sound/Makefile.am
+++ b/simgear/sound/Makefile.am
@@ -18,10 +18,11 @@ libsgsound_a_SOURCES = \
 	soundmgr_openal.cxx \
 	xmlsound.cxx 
 
-check_PROGRAMS = openal_test1 openal_test2
+check_PROGRAMS = openal_test1 openal_test2 openal_test3
 
 openal_test1_SOURCES = openal_test1.cxx
 openal_test2_SOURCES = openal_test2.cxx
+openal_test3SOURCES = openal_test3.cxx
 
 openal_test1_LDADD = \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
@@ -35,5 +36,14 @@ openal_test2_LDADD = \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/math/libsgmath.a \
 	$(openal_LIBS)
+
+openal_test3_LDADD = \
+	libsgsound.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(top_builddir)/simgear/timing/libsgtiming.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/math/libsgmath.a \
+	$(openal_LIBS) -lstdc++
 
 INCLUDES = -I$(top_srcdir) -DSRC_DIR=\"$(top_srcdir)/simgear/sound\"
