Splicing visitor for rewriting scene graphs with a minimum of copying

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -1232,6 +1232,12 @@
 				RelativePath="..\..\simgear\scene\util\SGUpdateVisitor.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\util\SplicingVisitor.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\SplicingVisitor.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\util\StateAttributeFactory.cxx">
 			</File>
 			<File
