--- a/simgear/version.h.in
+++ b/simgear/version.h.in
@@ -26,7 +26,7 @@
 #define _SIMGEAR_VERSION_H
 
 
-#define SIMGEAR_VERSION "@VERSION@"
+#define SIMGEAR_VERSION @VERSION@
 
 
 #endif // _SIMGEAR_VERSION_H
