Update MSVC 9 projects

--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -2002,6 +2002,10 @@
 				/>
 			</FileConfiguration>
 		</File>
+		<File
+			RelativePath="..\..\simgear\version.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
