- Remove reference to dead files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,9 +7,7 @@ EXTRA_DIST = \
 	README.plib \
 	README.OpenAL \
 	README.OSG \
-	projects \
-	SimGear.dsp \
-	SimGear.dsw
+	projects
 
 SUBDIRS	= simgear
 
