Add a missing .hxx file for "make dist"

--- a/simgear/scene/material/Makefile.am
+++ b/simgear/scene/material/Makefile.am
@@ -30,6 +30,6 @@ libsgmaterial_a_SOURCES = \
 	mat.cxx \
 	matlib.cxx \
 	matmodel.cxx \
-	Noise.cxx
+	Noise.cxx Noise.hxx
 
 INCLUDES = -I$(top_srcdir)
