Add a missing source file so it will be included with "make dist".

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -27,6 +27,7 @@ include_HEADERS = \
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
+	BoundingVolumeBuildVisitor.hxx \
 	particles.cxx \
 	model.cxx \
 	modellib.cxx \
