Add -ldl for newer ld defaults from fedora 13
Modified Files:
	simgear/screen/Makefile.am

--- a/simgear/screen/Makefile.am
+++ b/simgear/screen/Makefile.am
@@ -41,7 +41,8 @@ TestRenderTexture_SOURCES = TestRenderTexture.cpp
 TestRenderTexture_LDADD = \
 	libsgscreen.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
-	$(opengl_LIBS)
+	$(opengl_LIBS) \
+	-ldl
 endif
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) -DGLX_GLXEXT_PROTOTYPES
