Add radial intersection code to SGGeodesy, and test coverage for geocentric helpers.

--- a/simgear/math/Makefile.am
+++ b/simgear/math/Makefile.am
@@ -4,11 +4,21 @@ check_PROGRAMS  = SGMathTest SGGeometryTest
 TESTS           = $(check_PROGRAMS)
 
 SGMathTest_SOURCES = SGMathTest.cxx
-SGMathTest_LDADD = libsgmath.a -lsgstructure $(base_LIBS)
 
+SGMathTest_LDADD = \
+	libsgmath.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(base_LIBS)
+	
 SGGeometryTest_SOURCES = SGGeometryTest.cxx
-SGGeometryTest_LDADD = libsgmath.a -lsgstructure $(base_LIBS)
 
+SGGeometryTest_LDADD = \
+	libsgmath.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(base_LIBS)
+	
 lib_LIBRARIES = libsgmath.a
 
 include_HEADERS = \
