Automake changes to Hudson 'make check' runs. Includes moving the OpenAL test programs to 'noinst' so they don't run as part of make check

--- a/configure.ac
+++ b/configure.ac
@@ -489,7 +489,7 @@ case "${host}" in
 #       AC_CHECK_FRAMEWORK(osgDB, [#include <osgDB/Version>], $with_osg_framework)
 #       AC_CHECK_FRAMEWORK(osgSim, [#include <osgSim/Version>], $with_osg_framework)
 #       AC_CHECK_FRAMEWORK(osgParticle, [#include <osgParticle/Version>], $with_osg_framework)
-#       AC_CHECK_FRAMEWORK(osg, [#include <osg/Version>], $with_osg_framework)
+        AC_CHECK_FRAMEWORK(osg, [#include <osg/Version>], $with_osg_framework)
 #       osg_FRAMEWORKS="$FRAMEWORKS"
 #       FRAMEWORKS=""
 #       AC_SUBST(osg_FRAMEWORKS)
